Иконки для продуктов

--- a/dbforgesqlstudioexp/dbforgesqlstudioexp.nuspec
+++ b/dbforgesqlstudioexp/dbforgesqlstudioexp.nuspec
@@ -2,13 +2,13 @@
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
     <metadata>
         <id>dbforgesqlstudioexp</id>
-        <version>5.5.311.1</version>
+        <version>5.5.311</version>
         <title>DbForgeSqlServerStudioExpress</title>
         <description>dbForge Studio for SQL Server is a powerful IDE for SQL Server management, administration, development, data reporting and analysis. </description>
         <authors>Devart</authors>
         <summary>dbForge Studio for SQL Server (Express)</summary>
         <projectUrl>https://www.devart.com/dbforge/sql/studio</projectUrl>
-        <iconUrl>https://github.com/svoyak/chocopackages/blob/master/AddFiles/dbforgesqlstudioexp/app128.png</iconUrl>
+        <iconUrl>https://cdn.rawgit.com/svoyak/chocopackages/19d83be3/AddFiles/dbforge/dbforge.png</iconUrl>
         <licenseUrl>https://www.devart.com/dbforge/eula.html</licenseUrl>
         <releaseNotes>https://www.devart.com/dbforge/sql/studio/revision_history.html</releaseNotes>
         <tags>DataBase Management Studio SQL Tools</tags>
